fix: fixed misaligned form validation text with icon

--- a/src/Form/_FormText.scss
+++ b/src/Form/_FormText.scss
@@ -7,6 +7,7 @@
     margin-inline-end: .25em;
     width: 1em;
     display: inline-block;
+    vertical-align: text-bottom;
   }
 
   & ~ .pgn__form-text {
